# instagram_mcp

./: SKILL.md  pyproject.toml  requirements.txt
src/: cli.py  mcp_server.py
